--- a/Tarefa 9 - carrossel/css/style.css
+++ b/Tarefa 9 - carrossel/css/style.css
@@ -1,3 +1,9 @@
+/* Tarefa 9 - carrossel */
+
+/* Atividade 1 */
+
+/* Crie um carrossel de imagens em seu site */
+
 .carousel-container {
   width: 100%;
   overflow: hidden;
